commit tree 0740d3ba587b20b81a907f16e5fc9c0aaa78c85e

--- a/index.html
+++ b/index.html
@@ -16,30 +16,30 @@
 
       <!-- Add a text input with the id and name attributes set to 'fullname' -->
       <!-- Include the place holder text "Enter Name" and make this input required -->
-      <label for = 'name'>Enter Name</label>
-      <input type = 'text' id = 'name' name = 'name' placeholder = 'Enter Your Name Here'required>
+      <label for = 'fullname'>Name</label>
+      <input type = 'text' id = 'fullname' name = 'name' placeholder = 'Enter Name'required>
 
 
       <!-- Add a label for 'email'-->
 
       <!-- Add a email input with the id and name attributes set to 'email' -->
       <!-- Include the place holder text "Enter Email" and make this input required -->
-      <label for = 'email'>Enter Email</label>
-      <input type = 'email' id = 'email' name = 'email' placeholder = 'Enter Your Email' required>
+      <label for = 'email'>Email</label>
+      <input type = 'email' id = 'email' name = 'email' placeholder = 'Enter Email' required>
 
       <!-- Add a label for 'phone'-->
 
       <!-- Add a telephone input with the id and name attributes set to 'phone' -->
       <!-- Include the place holder text "Enter Telephone (optional)" -->
-      <label for = 'phone'> Enter Your Phone Number(Optional) </label>
-      <input type = 'tel' id = 'phone' name = 'phone' placeholder = 'Enter Your Phone Number Here(optional'>
+      <label for = 'phone'>Phone</label>
+      <input type = 'tel' id = 'phone' placeholder = 'Enter Telephone (optional)'>
 
       <!-- Add a label for 'message'-->
 
       <!-- Add a textarea tag with the id and name attributes set to 'message' -->
       <!-- Include the place holder text "Enter Message" -->
-      <label for = 'message'>Anything else we should know?</label>
-      <textarea id = 'message' name = 'message' placeholder="Extra Notes"></textarea>
+      <label for = 'message'>Message</label>
+      <textarea id = 'message' name = 'message' placeholder="Enter Message"></textarea>
 
       <!-- Add a checkbox input with the id set to 'checkbox' -->
       <h3>What are some basic needs of yours</h3>
